--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,12 @@
 body {
 	text-align: center;
 }
+
+.smiley{
+    margin: 0 auto;
+	background-color: rgba(200, 255, 255, 0.2);
+	background-image: url(../img/temp.jpg);
+	background-blend-mode: multiply;
+	width: 300px;
+	height: 300px;
+}
