--- a/css/all.css
+++ b/css/all.css
@@ -1,10 +1,12 @@
 body {
 	background-color: rgba(200, 255, 255, 0.2);
 }
+
+/*
 footer{
 	background-image: url(../img/tests.png);
 	margin: 0 auto;
 	width: 740px;
 	height: 634px;
 	transform: scale(0.2,0.2);
-}
+}*/
